--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border: .25vmin solid #333;
         }
     </style>
-    <script defer type="module" src="./game.js"></script>
+    <script defer type="module" src="./scripts/game.js"></script>
     <title>Snake JS Game</title>
 </head>
 <body>
