Updated food to apple.svg

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         }
 
         .food {
-            background-color: hsl(20, 100%, 50%);
-            border: .25vmin solid #333;
+            background-image: url("./assets/img/apple.svg");
         }
     </style>
     <script defer type="module" src="./scripts/game.js"></script>
